--- a/easypermissions/build.gradle
+++ b/easypermissions/build.gradle
@@ -38,15 +38,15 @@ android {
 }
 
 dependencies {
-    api "androidx.appcompat:appcompat:1.1.0"
-    api "androidx.annotation:annotation:1.1.0"
-    api "androidx.core:core:1.3.0"
-    api "androidx.fragment:fragment:1.2.5"
+    api "androidx.appcompat:appcompat:1.4.1"
+    api "androidx.annotation:annotation:1.3.0"
+    api "androidx.core:core:1.7.0"
+    api "androidx.fragment:fragment:1.4.1"
 
-    testImplementation 'junit:junit:4.13'
-    testImplementation 'com.google.truth:truth:0.42'
-    testImplementation 'org.robolectric:robolectric:4.1'
-    testImplementation 'androidx.test:core:1.3.0-rc01'
-    testImplementation 'androidx.fragment:fragment-testing:1.2.5'
+    testImplementation 'junit:junit:4.13.2'
+    testImplementation 'com.google.truth:truth:1.1.3'
+    testImplementation 'org.robolectric:robolectric:4.2.1'
+    testImplementation 'androidx.test:core:1.4.0'
+    testImplementation 'androidx.fragment:fragment-testing:1.4.1'
     testImplementation 'org.mockito:mockito-core:2.23.4'
 }
